# yce-harness

./: a2a_server.py  agent.py  autonomous_agent_demo.py  parallel.py  prompts.py  queue_runner.py
agents/: definitions.py  yaml_loader.py
generations/metroplex-5/: README.md  init.sh
generations/metroplex-5/backend/: main.py  models.py  routes.py
generations/metroplex-ideaforge-100/: .codebase_learnings.json  init.sh  pyproject.toml  requirements.txt
generations/metroplex-ideaforge-100/tests/: __init__.py  conftest.py
generations/metroplex-ideaforge-110-r2/: .gitignore  .linear_project.json  README.md  app_spec.txt  init.sh
generations/metroplex-ideaforge-110-r2/llm_citation_checker/: typer_cli.py
generations/metroplex-ideaforge-126/: .gitignore  README.md  init.sh  requirements.txt
generations/metroplex-ideaforge-132/: init.sh
generations/metroplex-ideaforge-195/: .gitignore  README.md  init.sh
generations/metroplex-ideaforge-195/api_evolve/: __init__.py  cli.py  db.py  main.py  models.py  register.py  token.py  usage.py
generations/metroplex-ideaforge-197/: .gitignore  README.md  init.sh
generations/metroplex-ideaforge-197/claudeops/: __init__.py  (+5 more)
generations/metroplex-ideaforge-26/: .gitignore  README.md  init.sh
generations/metroplex-ideaforge-38/: .gitignore  README.md  init.sh
generations/metroplex-ideaforge-44/: .gitignore  README.md  init.sh
prompts/: app_spec_starship_agents.txt  carmack_agent_prompt.md  sky_lynx_agent_prompt.md
prompts/example_app_specs/: app_spec_metroplex.txt
tests/: test_a2a_server.py  test_queue_runner.py
(+89 files in other folders)
