[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-observability"
version = "0.1.0"
description = "Real-time observability layer for Model Context Protocol (MCP) tool calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "click>=8.1.7",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "textual>=0.50.1",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.2",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.3",
]

[project.scripts]
mcp-obs = "mcp_obs.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
